# prime

./: Cargo.toml  LICENSE  README.md
examples/: chunk_multithreaded_generator.rs  file_generator.rs  optimized_realtime_generator.rs  simple_generator.rs  simple_is_prime.rs
src/: calculator.rs  generator.rs  lib.rs
