[package]
name = "prime"
version = "0.1.0"
authors = ["Martino Fontana <tinozzo123@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
integer-sqrt = "*"
rayon = "*"

[dev-dependencies]
crossbeam-channel = "*"
ctrlc = "*"

[profile.release]
lto = "fat"
