[package]
name = "prime"
version = "0.4.0"
authors = ["Martino Fontana <tinozzo123@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
lto = true

[dependencies]
assert-unchecked = "0.1"
num = "0.4"
rayon = "1.7"

[dev-dependencies]
crossbeam-channel = "0.5"
ctrlc = "3.4"
